// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div class="win-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="true" class="win-checkbox">
    <div class="win-checkbox__icon win-checkbox__icon--round win-checkbox__icon--checked"><i class="win-icon win-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="win-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="true" class="win-checkbox">
    <div class="win-checkbox__icon win-checkbox__icon--round win-checkbox__icon--checked"><i class="win-icon win-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="win-checkbox__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div class="win-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox">
    <div class="win-checkbox__icon win-checkbox__icon--round" style="font-size: 10rem;"><i class="win-icon win-icon-success">
        <!----></i></div><span class="win-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="false" class="win-checkbox">
    <div class="win-checkbox__icon win-checkbox__icon--round" style="font-size: 5rem;"><i class="win-icon win-icon-success">
        <!----></i></div><span class="win-checkbox__label">label</span>
  </div>
</div>
`;

exports[`label disabled 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="win-checkbox win-checkbox--label-disabled">
  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
      <!----></i></div><span class="win-checkbox__label">Label</span>
</div>
`;

exports[`label-position prop 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="win-checkbox"><span class="win-checkbox__label win-checkbox__label--left">Label</span>
  <div class="win-checkbox__icon win-checkbox__icon--round"><i class="win-icon win-icon-success">
      <!----></i></div>
</div>
`;
